increased top-margin for animation container to try and prevent clipping with big burger

--- a/src/App.css
+++ b/src/App.css
@@ -262,7 +262,7 @@ button {
 
 .container {
   position: relative;
-  margin-top: 30%;
+  margin-top: 40%;
   height: 100%; /* Adjust the height as needed */
   overflow: hidden;
 }
